<resources>
    <string name="app_name">ProteApp</string>

    <!-- Strings related to login -->
    <string name="indicativo">Indicativo</string>
    <string name="passwd">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"¡ Bienvenido !"</string>
    <string name="actualPass">Contraseña actual</string>
    <string name="newPass">Contraseña nueva</string>
    <string name="repeatNewPass">Confirmar contraseña</string>
    <string name="updatePass">Actualizar contraseña</string>
    <string name="characterLimit">Al menos 10 caracteres</string>

    <!-- Strings related to navigation drawer -->
    <string name="navigation_drawer_open">Abrir lateral</string>
    <string name="navigation_drawer_close">Cerrar lateral</string>
    <string name="nav_header_title">Nombre del Voluntario</string>
    <string name="nav_header_subtitle">Indicativo</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="profile">Perfil</string>
    <string name="menu_home">Noticias</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_services">Servicios</string>
    <string name="menu_maps">Mapas</string>
    <string name="menu_contacts">Contactos</string>
    <string name="menu_manuals">Manuales</string>

    <!-- Strings related to services boss menu -->
    <string name="assign_tab">Asignar</string>
    <string name="create_tab">Crear</string>
    <string name="modify_tab">Modificar</string>

    <!-- Strings related to service item -->
    <string name="place">Lugar:</string>
    <string name="volunteers">Voluntarios:</string>
    <string name="vehicles">Vehiculos: </string>
    <string name="infoMessage">No se han encontrado servicios en esa fecha</string>

    <!-- Alert Dialogs common -->
    <string name="accept">Aceptar</string>

    <!-- Calendar menu -->
    <string name="disp_calendar">Disponibilidad</string>
    <string name="disp1_00_06">00:00 - 06:00</string>
    <string name="disp2_08_12">06:00 - 12:00</string>
    <string name="disp3_12_18">12:00 - 18:00</string>
    <string name="disp4_18_24">18:00 - 24:00</string>
    <string name="disp5_00_12">00:00 - 12:00</string>
    <string name="disp6_18_24">06:00 - 18:00</string>
    <string name="disp7_12_24">12:00 - 24:00</string>
    <string name="disp8_00_24">00:00 - 24:00</string>
    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="send">Enviar</string>
    <string name="success">Dispinibilidad guardada correctamente</string>

    <!-- Strings related to Contact menu -->
    <string name="phone">Teléfono:</string>

    <!-- Errors -->
    <string name="ER_001">Indicativo incorrecto</string>
    <string name="ER_002">Contraseña incorrecta</string>
    <string name="ER_003">Indicativo o contraseña incorrectos</string>
    <string name="ER_004">Sin datos</string>
    <string name="ER_005">No se pudo conectar con el servidor. Revise su conexión a internet.</string>
    <string name="ER_006">No se pudo guardar la disponibilidad. Revise su conexión a internet.</string>
    <string name="ER_007">No se pudo cargar la lista de contactos. Revise su conexión a internet.</string>
    <string name="ER_008">Ha ocurrido un error al obtener la fecha actual</string>
    <string name="ER_009">Ha ocurrido un error al obtener la fecha seleccionada</string>
    <string name="ER_010">Error al cargar los datos del servicio</string>
    <string name="ER_011">No se han podido guardar los datos</string>
    <string name="ER_012">No se pudo obtener informacion del servicio</string>
    <string name="ER_013">No se pudo obtener la lista de voluntarios</string>
    <string name="ER_014">No se pudo obtener la lista de vehiculos</string>
    <string name="ER_015">No se han encontrado noticias destacables</string>

    <string name="ER_1001">No se pudo conectar con el servidor.</string>
    <string name="ER_1002">Error al obtener datos del usuario</string>
    <string name="invalid_username">Indicativo incorrecto</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="passChangeInvalid">Contraseña no válida</string>
    <string name="difPass">Las contraseñas no coinciden</string>
    <string name="impossibleToChangePass">No se pudo cambiar la contraseña</string>
    <string name="impossibleSaveData">No se pudieron guardar los cambios</string>

    <!-- Assign Action fragment -->
    <string name="btnAssignVolunteers">Voluntarios</string>
    <string name="btnAssignVehicles">Vehiculos</string>
    <string name="btnAccept">Aceptar</string>
    <string name="nullAvailability">No hay voluntarios disponibles</string>
    <string name="saveListAction">Listas guardadas correctamente</string>

    <!-- Strings related to Volunteer Service menu fragment -->
    <string name="done">Realizados</string>
    <string name="next">Próximos</string>

    <!-- Strings related o User Settings Menu -->
    <string name="name">Nombre</string>
    <string name="driver_license">Carnet de conducir</string>
    <string name="email">Correo electronico</string>
    <string name="birtday">Fecha de nacimiento</string>
    <string name="mobilePhone">Telefono</string>
    <string name="succesfulUpdate">Datos actualizados</string>

</resources>
