<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.services.boss.ServicesFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/assign_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/modify_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/create_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_tab" />
    </com.google.android.material.tabs.TabLayout>

    <fragment
        android:id="@+id/services_boss_host_fragment"
        android:name="com.example.pi_v1.ui.services.boss.AssignFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>